Inclusion of design seems to progress okay. Need to continue later on, but might focus on performances first... We need to ensure loading (either from datababse or locally) only applies to visible elements!

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+/* You can use Tailwind classes and add your custom styles as needed */
+
+
 *{
   margin:0;
   padding:0;
@@ -217,6 +223,7 @@ input{
 .icon{
   cursor: pointer;
   font-size: 20px;
+  display: inline;
 }
 
 .icon:hover{
